# mimicry

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/mimicry/config/: __init__.py  config.py  database_config.py
src/mimicry/dao/: exceptions.py
src/mimicry/dao/repository/: __init__.py  models.py  reference_repository.py  repository.py
src/mimicry/dao/repository/migrations/: env.py
src/mimicry/dao/repository/migrations/versions/: 2025_02_23_1434-d5f361e0412e_initial_migration.py
src/mimicry/dto/: __init__.py  users.py
src/mimicry/managers/: __init__.py  exceptions.py  user_manager.py
tests/integration_tests/: conftest.py
tests/integration_tests/dao/repository/: conftest.py  test_version.py
tests/integration_tests/dao/repository/migrations/: test_migrations.py
tests/integration_tests/managers/user_manager/: conftest.py  test_add_user.py  test_add_user_failed.py
