[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimicry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.3",
    "psycopg[binary]>=3.2.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.5.1",
]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "black>=25.1.0",
]
testing = [
    "pytest-faker>=2.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "testcontainers[postgresql]>=4.9.1",
    "pytest-cov>=6.0.0",
]
